    - Changed CFLAGS and LDFLAGS definition lines to allow external values,
      as GCC hardening sent by Debian.
* gui/: removed. The binary axel-kapt depended on kaptain that is no longer
        available for QT5 (dead upstream development). For details, see
        https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=789819
* http.c: fix a possible buffer overflow.
* manpage:
    - Moved to man/ directory.
    - Using txt2man to generate the manpage.
    - Updated the manpage.
    - Removed some typos.
    - Dropped the Chinese manpage (outdated now).
* README.md: added to be the main file for GitHub.
* README.to-contribute: added to explain how to contribute.

  [ Barry deFreese ] 2009-06-11

* Added Hurd (GNU) to configure file. It will allow Axel to build over
  GNU/Hurd. This change was provided by Barry deFreese <bdefreese@debian.org>,
  as a patch to Debian project, on 11 Jun 2009. For details, see
  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=532793

  [ Mark Smith ] 2010-07-03

* Added a support to IPv6. This change was provided by
  Mark Smith <nanog@85d5b20a518b8f6864949bd940457dc124746ddc.nosense.org>,
  as a patch to Debian project, on 03 Jul 2010. For details, see
  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=525290

  [ Osamu Aoki ] 2012-03-10

* Added the translation to Japanese. See
  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=663286
* Changed the configure file to honor the noopt when building. So, was removed
  the '-Os' option. See https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=645271

  [ From original authors ]

* Releasing this old block (written after 2.4 and before 2.5 versions):

  - Make axel build on HP-UX, thanks Ciro Iriarte
  - Fix Solaris support (Closes: #312092), thanks Sebastian Kayser
  - Add PO-Revision-Date header to ru.po

Version 2.4

- Fix a buffer overflow caused by wrong size limits  when copying strings (Closes: #311569), thanks Michael Schwendt and the Fedora project members